# toit-supabase

./: CMakeLists.txt  Makefile  README.md  package.yaml  realtime_notes.txt
.github/workflows/: ci.yml  publish.yml
examples/: auth_email.toit  auth_oauth.toit  package.yaml  rest.toit  storage.toit
examples/utils/: client.toit  local_storage.toit
src/: auth.toit  filter.toit  supabase.toit  test_rt.toit  utils_.toit
tests/: CMakeLists.txt  TESTS_LICENSE  package.yaml  supabase_filters_test.toit  supabase_local_server.toit  supabase_test.toit
tests/supabase/: README.md  supabase_filters_test.toit  supabase_local_server.toit  supabase_schema_test.toit  supabase_test.toit
tests/supabase/supabase_test/supabase/: config.toml
tests/supabase/supabase_test/supabase/migrations/: 20230110194914_storage.sql  20230727144221_filters.sql  20240325135511_other_schema.sql
tests/supabase_test/supabase/: seed.sql
tests/supabase_test/supabase/migrations/: 20230105212858_initial.sql  20230110194914_storage.sql  20230727144221_filters.sql
tools/: toit.cmake
